--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">For fun</li>
                 <li><a href="ereuntzdag.se">ereuntzdag.se</a></li>
+                <li><a href="angularjs">Angular.js</a></li>
                 <li><a href="LHS">Last Hen Standing</a></li>
               </ul>
             </li>
