--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                 <li><a href="http://www.teknikfokus.se/">Teknikfokus 2016</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For fun</li>
-                <li><a href="ereuntzdag.se">ereuntzdag.se</a></li>
-                <li><a href="angularjs">Angular.js</a></li>
+                <li><a href="http://ereuntzdag.club/ereuntzdag.se/">ereuntzdag.se</a></li>
+                <li><a href="http://ereuntzdag.club/">ereuntzdag.club</a></li>
+                <li><a href="yoangular">Angular.js Yeoman</a></li>
                 <li><a href="LHS">Last Hen Standing</a></li>
               </ul>
             </li>
