--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">For fun</li>
                 <li><a href="http://ereuntzdag.club/ereuntzdag.se/">ereuntzdag.se</a></li>
-                <li><a href="http://ereuntzdag.club/">ereuntzdag.club</a></li>
+                <!--<li><a href="http://ereuntzdag.club/">ereuntzdag.club</a></li>-->
                 <li><a href="yoangular">Angular.js Yeoman</a></li>
                 <li><a href="LHS">Last Hen Standing</a></li>
               </ul>
@@ -61,7 +61,7 @@
         </div><!--/.nav-collapse -->
 
         <div class="center-block img-container animated fadeInDown">
-          <img src="img/dat14vwi.jpg" class="pulse img-circle img-responsive">
+          <img src="img/teknikfokus_x3.png" class="pulse img-circle img-responsive">
         </div>
 
         <div class="text-center">
