--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My Projects <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
+                <li class="dropdown-header">For students</li>
+                <li><a href="Datateknik">Datateknik material</a></li>
                 <li class="dropdown-header">For companies</li>
-                <li><a href="#">Ynnor bilsök</a></li>
+                <li><a href="http://www.lunicore.se">Lunicore</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For ideel</li>
                 <li><a href="http://www.teknikfokus.se/">Teknikfokus 2016</a></li>
