--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li class="dropdown-header">For students</li>
                 <li><a href="Datateknik">Datateknik material</a></li>
+                <li class="divider"></li>
                 <li class="dropdown-header">For companies</li>
                 <li><a href="http://www.lunicore.se">Lunicore</a></li>
                 <li class="divider"></li>
