--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My Projects <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li class="dropdown-header">For students</li>
-                <li><a href="Datateknik">Datateknik material</a></li>
+                <li><a href="datateknik">Datateknik material</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For companies</li>
                 <li><a href="http://www.lunicore.se">Lunicore</a></li>
