--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li><a id="popupBtn" style="display: none;" href="javascript:void(0)" onclick="document.getElementById('popup').style.display='block';document.getElementById('popupBtn').style.display='none'"><img style="width:24px;height:24px" src="img/v_32x32.png" alt="V"></a></li>
           </ul>
         </div>
-        <div id="popup" class="popup" style="display: none"><a href="javascript:void(0)" onclick="document.getElementById('popup').style.display='none';document.getElementById('popupBtn').style.display='block'">X</a>
+        <div id="popup" class="popup" style="display: none; overflow: hidden;"><a href="javascript:void(0)" onclick="document.getElementById('popup').style.display='none';document.getElementById('popupBtn').style.display='block'">X</a>
           <div class="github-card" data-github="VictorWinberg" data-width="300" data-height="" data-theme="default"></div>
         </div>
     </div>
