--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
                 <li><a href="http://www.teknikfokus.se/">Teknikfokus 2016</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For fun</li>
-                <li><a href="http://ereuntzdag.club/ereuntzdag.se/">ereuntzdag.se</a></li>
-                <!--<li><a href="http://ereuntzdag.club/">ereuntzdag.club</a></li>-->
+                <li><a href="http://catarinasorensen.github.io/ereuntzdag.se/">ereuntzdag.se</a></li>
               </ul>
             </li>
           </ul>
