--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <ul class="list-inline animated fadeInUp">
             <li><a href="https://github.com/VictorWinberg/" class="fa fa-github fa-2x" target="_blank"></a></li>
-            <li><a href="https://www.facebook.com/ViictooorW" class="fa fa-facebook fa-2x" target="_blank"></a></li>
+            <li><a href="https://www.facebook.com/NevaSsounD" class="fa fa-facebook fa-2x" target="_blank"></a></li>
             <li><a href="https://www.youtube.com/user/VictorW95" class="fa fa-youtube fa-2x" target="_blank"></a></li>
             <li><a href="https://se.linkedin.com/in/victorwinberg" class="fa fa-linkedin fa-2x" target="_blank"></a></li>
             <li><a href="mailto:dat14vwi@student.lu.se" class="fa fa-envelope-o fa-2x" target="_blank"></a></li>
