--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <div class="site-wrapper-inner">
       <div class="cover-container">
         <nav class="nav nav-tabs navbar-right">
-          <li><a href="CV.pdf" target="_blank">Download CV</a></li>
+          <li>
+            <p style="margin-top: 10px">Download CV 
+            <a href="cv-en-victor.pdf" target="_blank" style="display: inline-block">EN</a>
+            <a href="cv-sv-victor.pdf" target="_blank" style="display: inline-block">SV</a>
+          </li>
         </nav>
 
         <div id="navbar">
