--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="cover-container">
         <nav class="nav nav-tabs navbar-right">
           <li>
-            <p style="margin-top: 10px">Download CV 
+            <p style="margin-top: 10px">Download CV</p>
             <a href="cv-en-victor.pdf" target="_blank" style="display: inline-block">EN</a>
             <a href="cv-sv-victor.pdf" target="_blank" style="display: inline-block">SV</a>
           </li>
