--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <nav class="nav nav-tabs navbar-right">
           <li>
             <p style="margin-top: 10px">Download CV</p>
-            <a href="cv-en-victor.pdf" target="_blank" style="display: inline-block">EN</a>
-            <a href="cv-sv-victor.pdf" target="_blank" style="display: inline-block">SV</a>
+            <a href="cv/en.pdf" target="_blank" style="display: inline-block">EN</a>
+            <a href="cv/sv.pdf" target="_blank" style="display: inline-block">SV</a>
           </li>
         </nav>
 
@@ -43,6 +43,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li class="dropdown-header">For students</li>
                 <li><a href="datateknik">Datateknik</a></li>
+                <li><a href="magasinet">Magasinet</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For companies</li>
                 <li><a href="http://www.lunicore.se">Lunicore</a></li>
