Removed popup button

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
+
+  <!-- Description tags -->
+  <meta name="author" content="Victor Winberg">
   <link rel="icon" href="img/v_64x64.png">
 
   <title>Victor Winberg</title>
@@ -75,10 +75,9 @@
             <li><a href="https://www.facebook.com/NevaSsounD" class="fa fa-facebook fa-2x" target="_blank"></a></li>
             <li><a href="https://se.linkedin.com/in/victorwinberg" class="fa fa-linkedin fa-2x" target="_blank"></a></li>
             <li><a href="mailto:dat14vwi@student.lu.se" class="fa fa-envelope-o fa-2x" target="_blank"></a></li>
-            <li><a id="popupBtn" style="display: none;" href="javascript:void(0)" onclick="document.getElementById('popup').style.display='block';document.getElementById('popupBtn').style.display='none'"><img style="width:24px;height:24px" src="img/v_32x32.png" alt="V"></a></li>
           </ul>
         </div>
-        <div id="popup" class="popup" style="display: none; overflow: hidden;"><a href="javascript:void(0)" onclick="document.getElementById('popup').style.display='none';document.getElementById('popupBtn').style.display='block'">X</a>
+        <div id="popup" class="popup"><a href="javascript:void(0)" onclick="document.getElementById('popup').style.display='none'">X</a>
           <div class="github-card" data-github="VictorWinberg" data-width="300" data-height="" data-theme="default"></div>
         </div>
     </div>
