--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li><a href="http://www.teknikfokus.se/">Teknikfokus 2016</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For fun</li>
+                <li><a href="myads">Lund Innovation - MyAds</a></li>
                 <li><a href="frontend-website">frontend-website</a></li>
                 <li><a href="http://catarinasorensen.github.io/ereuntzdag.se/">ereuntzdag.se</a></li>
               </ul>
