--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="text-center">
-          <h1 class="animated bounceIn">Hi, I'm victor<b>winberg</b><br>
+          <h1 class="animated bounceIn">Hi, I'm Victor Winberg<br>
             <small class="lead">Studying Master of Science in
               <a href="http://www.lth.se/english/education/programmes/master-engineering/computer-science-engineering/" target="_blank">
                 Computer Science and Engineering</a> at <a href="http://www.lunduniversity.lu.se/" target="_blank">Lund University</a>.</small>
