--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">For ideel</li>
                 <li><a href="http://www.teknikfokus.se/">OneList</a></li>
+                <li class="divider"></li>
                 <li class="dropdown-header">For school</li>
                 <li><a href="https://onelist.ml/">Teknikfokus 2016</a></li>
                 <li class="divider"></li>
