add relative paths in index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <link rel="stylesheet" type="text/css" href="/css/globalreset.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
+    <link rel="stylesheet" type="text/css" href="./css/globalreset.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Victor Winberg Portfolio</title>
   </head>
 
@@ -18,17 +18,17 @@
 
         <nav>
           <ul>
-            <li><a href="/" class="active">Home</a></li>
-            <li><a href="/html/work">Work</a></li>
-            <li><img src="/img/common/logo.svg" alt="My github logotype of the letter V"/></li>
-            <li><a href="/html/contact">Contact</a></li>
-            <li><a href="/html/about">About</a></li>
+            <li><a href="./" class="active">Home</a></li>
+            <li><a href="./html/work">Work</a></li>
+            <li><img src="./img/common/logo.svg" alt="My github logotype of the letter V"/></li>
+            <li><a href="./html/contact">Contact</a></li>
+            <li><a href="./html/about">About</a></li>
           </ul>
         </nav>
       </header>
 
       <main>
-        <img class="circle" src="/img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
+        <img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
         <h1>Victor Winberg</h1>
         <p>Developer | Student | Dedicated</p>
       </main>
