add relative paths to about.html

--- a/html/about.html
+++ b/html/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <link rel="stylesheet" type="text/css" href="/css/globalreset.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
+    <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Victor Winberg Portfolio</title>
   </head>
 
@@ -18,18 +18,18 @@
 
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/html/work">Work</a></li>
-            <li><img src="/img/common/logo.svg" alt="My github logotype of the letter V"/></li>
-            <li><a href="/html/contact">Contact</a></li>
-            <li><a href="/html/about" class="active">About</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="./work">Work</a></li>
+            <li><img src="../img/common/logo.svg" alt="My github logotype of the letter V"/></li>
+            <li><a href="../html/contact">Contact</a></li>
+            <li><a href="./about" class="active">About</a></li>
           </ul>
         </nav>
       </header>
 
       <main>
         <h1>About</h1>
-        <img src="/img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
+        <img src="../img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
         <p>
           Dedicated and focused engineering student with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social side. <br/>
           Previous work experience as a developer, IT-technicians, retail sellers and cashier. Previously functionary of the sections committee responsible for the contact and cooperation with companies.
@@ -44,7 +44,7 @@
         </p>
 
         <h2>Study</h2>
-        <img src="/img/about/datateknik.png" alt="Logotype for Computer Science and Engineering at Lund University" width="100"/>
+        <img src="../img/about/datateknik.png" alt="Logotype for Computer Science and Engineering at Lund University" width="100"/>
         <p>2014 - 2019</p>
         <p>Master of Science in Computer Engineering, 300 credits</p>
         <p>Faculty of Engineering LTH, Lund University</p>
