--- a/html/work.html
+++ b/html/work.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <link rel="stylesheet" type="text/css" href="/css/globalreset.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Victor Winberg Portfolio</title>
   </head>
 
@@ -18,11 +18,11 @@
 
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/html/work" class="active">Work</a></li>
-            <li><img src="/img/common/logo.svg" alt="My github logotype of the letter V"/></li>
-            <li><a href="/html/contact">Contact</a></li>
-            <li><a href="/html/about">About</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="./work" class="active">Work</a></li>
+            <li><img src="../img/common/logo.svg" alt="My github logotype of the letter V"/></li>
+            <li><a href="./contact">Contact</a></li>
+            <li><a href="./about">About</a></li>
           </ul>
         </nav>
       </header>
