add mobile viewport and relative links

--- a/html/contact.html
+++ b/html/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Victor Winberg Portfolio</title>
