--- a/html/about.html
+++ b/html/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Victor Winberg Portfolio</title>
@@ -21,7 +22,7 @@
             <li><a href="../">Home</a></li>
             <li><a href="./work">Work</a></li>
             <li><img src="../img/common/logo.svg" alt="My github logotype of the letter V"/></li>
-            <li><a href="../html/contact">Contact</a></li>
+            <li><a href="./contact">Contact</a></li>
             <li><a href="./about" class="active">About</a></li>
           </ul>
         </nav>
