--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
         <nav>
           <ul>
-            <li><a href="./" class="active">Home</a></li>
-            <li><a href="./html/work">Work</a></li>
-            <li><img src="./img/common/logo.svg" alt="My github logotype of the letter V"/></li>
+            <li><a href="./" class="active">
+              <img src="./img/common/logo.svg" alt="My github logotype of the letter V"/>
+            </a></li>
+            <li><a href="./html/resume">Résumé</a></li>
+            <li><a href="./html/gallery">Gallery</a></li>
             <li><a href="./html/contact">Contact</a></li>
             <li><a href="./html/about">About</a></li>
           </ul>
