--- a/html/about.html
+++ b/html/about.html
@@ -19,9 +19,11 @@
 
         <nav>
           <ul>
-            <li><a href="../">Home</a></li>
-            <li><a href="./work">Work</a></li>
-            <li><img src="../img/common/logo.svg" alt="My github logotype of the letter V"/></li>
+            <li><a href="../">
+              <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
+            </a></li>
+            <li><a href="./resume">Résumé</a></li>
+            <li><a href="./gallery">Gallery</a></li>
             <li><a href="./contact">Contact</a></li>
             <li><a href="./about" class="active">About</a></li>
           </ul>
