update resume style

--- a/html/about.html
+++ b/html/about.html
@@ -32,49 +32,23 @@
 
       <main>
         <h1>About</h1>
-        <img src="../img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
         <p>
-          Dedicated and focused engineering student with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social side. <br/>
-          Previous work experience as a developer, IT-technicians, retail sellers and cashier. Previously functionary of the sections committee responsible for the contact and cooperation with companies.
+          Hi, my name is Victor Winberg born and raised in a small town called Hofterup. Lived in Lund since I started at the Faculty of Engineering.
         </p>
         <p>
-          Looking for a service where I can further develop my skills in programming and problem solving, as well as get the opportunity to learn new. In group I am a cheerful, initiative and cooperative guy, with great commitment and hungry for new challenges.
+          I discovered early on a keen interest in computers and technology, resulting in a natural choice to study the Technology Programme during high school.
+          With passion for programming, problem solving and challenges, I started studying Master of Science in Computer Engineering at the University of Lund.
+        </p>
+        <p>
+          With over 3000 commits on Github, I have had many school, hobby and fun projects over the years that I have learned a everything from programming languages such as; Python, Javascript, Elixir etc., to specific frameworks such as; Node, React, Phoenix, etc.
         </p>
 
-        <h2>Personal interests</h2>
+        <h1>Personal interests</h1>
         <p>
           My professional and hobby interests exists within software, software design, game development, image & graphics, web design and web creation. My favorite hobbies is to create my own websites, developing games and editing movies.
         </p>
 
-        <h2>Study</h2>
-        <img src="../img/about/datateknik.png" alt="Logotype for Computer Science and Engineering at Lund University" width="100"/>
-        <p>2014 - 2019</p>
-        <p>Master of Science in Computer Engineering, 300 credits</p>
-        <p>Faculty of Engineering LTH, Lund University</p>
-        <p>Expected graduation in June 2019</p>
-        <p>The education in Computer Engineering aims to meet the demand for engineers who are developing advanced computer technologies, systems and applications.</p>
-
-        <h2>Programming languages</h2>
-        <ul>
-          <li>Python</li>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Ruby</li>
-          <li>Scala</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Javascript</li>
-        </ul>
-
-        <h2>Frameworks</h2>
-        <ul>
-          <li>Node.js</li>
-          <li>React</li>
-          <li>Ruby on Rails</li>
-          <li>AngularJS</li>
-        </ul>
-
-        <h2>Social links</h2>
+        <h1>Social links</h1>
         <ul>
           <li><a href="mailto:victor.m.winberg@gmail.com">gmail</a></li>
           <li><a href="//victorwinberg.github.io">github</a></li>
