--- a/html/gallery.html
+++ b/html/gallery.html
@@ -30,22 +30,25 @@
         </nav>
       </header>
 
-      <main class="portfolio">
-        <div class="item large one"><p>Stab, LTH</p></div>
-        <div class="item two"><p>Nollning, LTH</p></div>
-        <div class="item tall three"><p>The Lost City of Pompeii, Italy</p></div>
-        <div class="item four"><p>Business Committee, LTH</p></div>
-        <div class="item five"><p>Marseille, France</p></div>
-        <div class="item six"><p>Colosseum in Rome, Italy</p></div>
-        <div class="item seven"><p>Riomaggiore in Cinque Terre, Italy</p></div>
-        <div class="item tall eight"><p>Genoa, Italy</p></div>
-        <div class="item nine"><p>Villach, Austria</p></div>
-        <div class="item large ten"><p>Trdelník, Prague, Czech Republic</p></div>
-        <div class="item eleven"><p>Barcelona, Spain</p></div>
-        <div class="item tall twelve"><p>Leaning Tower of Pisa, Italy</p></div>
-        <div class="item thirteen"><p>Blue Lagoon, Ayia Napa</p></div>
-        <div class="item fourteen"><p>La Folie Douce in Val Thorens, France</p></div>
-        <div class="item fifteen"><p>Zion National Park, Utah</p></div>
+      <main>
+        <h1>Gallery</h1>
+        <div class="portfolio centered">
+          <div class="item large one"><p>Stab, LTH</p></div>
+          <div class="item two"><p>Nollning, LTH</p></div>
+          <div class="item tall three"><p>The Lost City of Pompeii, Italy</p></div>
+          <div class="item four"><p>Business Committee, LTH</p></div>
+          <div class="item five"><p>Marseille, France</p></div>
+          <div class="item six"><p>Colosseum in Rome, Italy</p></div>
+          <div class="item seven"><p>Riomaggiore in Cinque Terre, Italy</p></div>
+          <div class="item tall eight"><p>Genoa, Italy</p></div>
+          <div class="item nine"><p>Villach, Austria</p></div>
+          <div class="item large ten"><p>Trdelník, Prague, Czech Republic</p></div>
+          <div class="item eleven"><p>Barcelona, Spain</p></div>
+          <div class="item tall twelve"><p>Leaning Tower of Pisa, Italy</p></div>
+          <div class="item thirteen"><p>Blue Lagoon, Ayia Napa</p></div>
+          <div class="item fourteen"><p>La Folie Douce in Val Thorens, France</p></div>
+          <div class="item fifteen"><p>Zion National Park, Utah</p></div>
+        </div>
       </main>
 
       <footer>
