--- a/html/resume.html
+++ b/html/resume.html
@@ -31,49 +31,78 @@
       </header>
 
       <main>
-        <h1>Résumé</h1>
+        <h1>Career Objective</h1>
         <p>
-          Dedicated and focused engineering student with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social side.<br/>
+          Dedicated and focused engineering student with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social side.
+        </p>
+        <p>
           Previous work experience as a developer, IT-technicians, retail sellers and cashier. Previously functionary of the sections committee responsible for the contact and cooperation with companies.
         </p>
         <p>
           Looking for a service where I can further develop my skills in programming and problem solving, as well as get the opportunity to learn new. In group I am a cheerful, initiative and cooperative guy, with great commitment and hungry for new challenges.
         </p>
-        <dl>
-          <dt>
-            <h2>Work experience</h2>
-          </dt>
-          <dd>
-            <table>
-              <tbody>
-                <tr>
-                  <td class="date"><small>Jun 2017 - Present</small></td>
-                  <td class="title"><h4>Software Developer</h4></td>
-                  <td class="location"><h3>Axis, Lund</h3></td>
-                  <td class="description"><p>Development of a full stack application, NodeJS (React & Express) and MySQL, with advanced management of risks and users for the multiple applications.</p></td>
-                </tr>
-                <tr>
-                  <td class="date"><small>Jun 2015 - Aug 2017</small></td>
-                  <td class="title"><h4>IT Consultant</h4></td>
-                  <td class="location"><h3>Lunicore, Lund</h3></td>
-                  <td class="description"><p>Participated in projects yourself and in groups with other consultants, often with different skills and experience. Projects vary greatly in design, scope and focus areas.</p></td>
-                </tr>
-                <tr class="clear">
-                  <td class="date"><small>Apr 2015 - Jun 2015</small></td>
-                  <td class="title"><h4>Software Developer</h4></td>
-                  <td class="location"><h3>CupManager, Lund</h3></td>
-                  <td class="description"><p>Development for preparing internationalization of a IT-system, that handles organization of tournaments, ex matchmaking.</p></td>
-                </tr>
-                <tr>
-                  <td class="date"><small>Jun 2013 - Sep 2014</small></td>
-                  <td class="title"><h4>Retail Sales</h4></td>
-                  <td class="location"><h3>Harald Nyborg, Löddeköpinge</h3></td>
-                  <td class="description"><p>Duties and experience in retail sales, cash service, inventory and warehouse work.</p></td>
-                </tr>
-              </tbody>
-            </table>
-          </dd>
-        </dl>
+
+        <h1>Work Experience</h1>
+        <table>
+          <tbody>
+            <tr>
+              <td class="date"><small>Jun 2017 - Present</small></td>
+              <td class="title"><h4>Software Developer</h4></td>
+              <td class="location"><h3>Axis, Lund</h3></td>
+              <td class="description"><p>Development of a full stack application, NodeJS (React & Express) and MySQL, with advanced management of risks and users for the multiple applications.</p></td>
+            </tr>
+            <tr>
+              <td class="date"><small>Jun 2015 - Aug 2017</small></td>
+              <td class="title"><h4>IT Consultant</h4></td>
+              <td class="location"><h3>Lunicore, Lund</h3></td>
+              <td class="description"><p>Participated in projects yourself and in groups with other consultants, often with different skills and experience. Projects vary greatly in design, scope and focus areas.</p></td>
+            </tr>
+            <tr class="clear">
+              <td class="date"><small>Apr 2015 - Jun 2015</small></td>
+              <td class="title"><h4>Software Developer</h4></td>
+              <td class="location"><h3>CupManager, Lund</h3></td>
+              <td class="description"><p>Development for preparing internationalization of a IT-system, that handles organization of tournaments, ex matchmaking.</p></td>
+            </tr>
+            <tr>
+              <td class="date"><small>Jun 2013 - Sep 2014</small></td>
+              <td class="title"><h4>Retail Sales</h4></td>
+              <td class="location"><h3>Harald Nyborg, Löddeköpinge</h3></td>
+              <td class="description"><p>Duties and experience in retail sales, cash service, inventory and warehouse work.</p></td>
+            </tr>
+          </tbody>
+        </table>
+
+        <h1>Study</h1>
+        <table>
+          <tbody>
+            <tr>
+              <td class="date"><small>2014 - 2019</small></td>
+              <td class="title"><h4>Master of Science in Computer Engineering</h4></td>
+              <td class="location"><h3>Faculty of Engineering LTH, Lund University</h3></td>
+              <td class="description"><p>The education in Computer Engineering aims to meet the demand for engineers who are developing advanced computer technologies, systems and applications.</p></td>
+            </tr>
+          </tbody>
+        </table>
+
+        <h1>Programming languages</h1>
+        <ul>
+          <li>Python</li>
+          <li>Java</li>
+          <li>C#</li>
+          <li>Ruby</li>
+          <li>Scala</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+        </ul>
+
+        <h1>Frameworks</h1>
+        <ul>
+          <li>Node.js</li>
+          <li>React</li>
+          <li>Ruby on Rails</li>
+          <li>AngularJS</li>
+        </ul>
       </main>
 
       <div style="clear: left"/>
